# lamacode

./: .gitignore  .lama.md  README.md  install.sh  pyproject.toml
docs/superpowers/plans/: 2026-05-30-lama-code.md  2026-05-30-live-output.md
docs/superpowers/specs/: 2026-05-30-lama-code-design.md  2026-05-30-live-output-design.md
src/lama_code/: __main__.py  agent.py  cli.py  config.py  display.py  executor.py  ollama.py
src/lama_code.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agent.py  test_cli.py  test_config.py  test_executor.py  test_ollama.py
